Feature/implement token listing ui (#1)
* Fix graying of send button

* Called exit app after installing the app update

* Added branch "bug-fixes/electron-app-update-windows" in push event of github action

* Updated version to test "app update on windows"

* Updated logic for auto update electron app

* Updated branch names for push and pull_request events

* Removed commented code

* Reset version to "1.0.0-alpha3"

* Removed develop branch tag for push event

* Updated version to "1.0.0-alpha4"

* Added bug-fixes branch to push event for testing

* Updated publish info for testing

* Changed hide to minimize for main window

* Removed "bug-fixes/payment-request-disapper-windows" branch from push event

* Reset publish github info

* Add a feature to restart a node with new masternode config when someone creates a new masternode

* Add feature to restart node with kill queue

* Add success label in I18n

* Add checks for electron app restart and queue kill

* Remove yaml file to fetch and save configuration, only use defi.conf as single source of configuration data

* Updated logic to add new masternode operator

* WIP: show resign node to wallet which has owner address

* Add a feature to check if masternode owner is associated with your wallet

* Add updated snapshot

* Add masternode setMasternode action reducer test

* Add saga test case for fetchMasterNodes, createMasterNode, resignMasterNode and checkMasternodeOwner features

* Fix TestData and testcases

* WIP: update the saga.test file with test case of restart node

* Fix saga check for createmasternode and add new transalation for electron error

* WIP: Splash loader is added

* Add react md spinner in splash loader screen

* Fix styles of color

* Replace all loader with new loader design

* WIP paginate masternode list

* Add pagination on masternode list

* Add pagination token for receive transaction

* Add a logic to disable pa

--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -22,6 +22,7 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.d.ts",
-    "src/stories/*.stories.tsx"
+    "src/stories/*.stories.tsx",
+    "src/components/CsvReader/index.tsx"
   ]
 }
