--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "defi-app",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "Defi blockchain client ui",
   "main": "./electron-app/build/index.js",
   "author": {
@@ -45,6 +45,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/preset-typescript": "^7.9.0",
+    "@types/react": "^16.9.48",
     "auto-launch": "^5.0.5",
     "autoprefixer": "^9.7.5",
     "axios": "^0.19.2",
