--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "defi-app",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "Defi blockchain client ui",
   "author": {
     "name": "Cake",
@@ -69,6 +69,7 @@
     "reactstrap": "^8.4.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
+    "shuffle-array": "^1.0.1",
     "ts-jest": "^26.0.0",
     "typings-for-css-modules-loader": "^1.7.0",
     "uifx": "^2.0.7"
@@ -81,7 +82,7 @@
     "@neutrinojs/jest": "^9.1.0",
     "@neutrinojs/react": "^9.1.0",
     "@neutrinojs/style-loader": "^9.1.0",
-    "@reduxjs/toolkit": "^1.3.2",
+    "@reduxjs/toolkit": "^1.3.3",
     "@storybook/preset-typescript": "^3.0.0",
     "@types/classnames": "^2.2.10",
     "@types/enzyme": "^3.10.5",
