Update repo name and remove deb support for linux

--- a/package.json
+++ b/package.json
@@ -153,8 +153,7 @@
     },
     "linux": {
       "target": [
-        "AppImage",
-        "deb"
+        "AppImage"
       ]
     },
     "win": {
@@ -162,7 +161,7 @@
     },
     "publish": {
       "provider": "github",
-      "repo": "defi-app",
+      "repo": "defi-app-2",
       "owner": "DeFiCh",
       "releaseType": "release"
     }
