--- a/.github/workflows/dev-builds.yml
+++ b/.github/workflows/dev-builds.yml
@@ -3,7 +3,7 @@ on:
     branches:
       - feature/implement-token-listing-ui
       - ci/*
-      - improvements/implement-lp
+      - feature/implement-lp
 jobs:
   build_linux_version:
     runs-on: ubuntu-latest
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: linux-build
-          path: 'dist/defi-app-2.0.0.AppImage'
+          path: 'dist/defi-app-2.0.1.AppImage'
 
   build_mac_version:
     runs-on: macos-latest
@@ -35,7 +35,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: mac-build
-          path: 'dist/defi-app-2.0.0.dmg'
+          path: 'dist/defi-app-2.0.1.dmg'
 
   build_windows_version:
     runs-on: windows-latest
@@ -68,4 +68,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: win-build
-          path: 'dist/defi-app Setup 2.0.0.exe'
+          path: 'dist/defi-app Setup 2.0.1.exe'
