Update logic to add DFi to dropdown always

--- a/.github/workflows/dev-builds.yml
+++ b/.github/workflows/dev-builds.yml
@@ -3,7 +3,7 @@ on:
     branches:
       - feature/implement-token-listing-ui
       - ci/*
-      - feature/implement-lp
+      # - feature/implement-lp
 jobs:
   build_linux_version:
     runs-on: ubuntu-latest
