Fix text case, improve error messages, etc

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,7 +1,7 @@
 {
   "name": "defi-app",
   "version": "2.1.0",
-  "description": "Defi blockchain client ui",
+  "description": "DeFi blockchain client ui",
   "author": {
     "name": "Cake",
     "email": "cake@cakedefi.com",
