Updated the About section of the app and added binary setup instruction in readme (#94)
Co-authored-by: Ahmed Hilali <monstrobishi@gmail.com>
Co-authored-by: saurabh391 <66796125+saurabh391@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "DeFi blockchain client ui",
   "main": "./electron-app/build/index.js",
   "author": {
-    "name": "Cake",
-    "email": "cake@cakedefi.com",
-    "url": "http://cakedefi.com/"
+    "name": "DeFiChain Foundation",
+    "email": "engineering@defichain.com",
+    "url": "http://defichain.com/"
   },
   "homepage": "./",
   "publicPath": "./",
