--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,9 +3,9 @@
   "version": "2.1.3",
   "description": "DeFi blockchain client ui",
   "author": {
-    "name": "Cake",
-    "email": "cake@cakedefi.com",
-    "url": "http://cakedefi.com/"
+    "name": "DeFiChain Foundation",
+    "email": "engineering@defichain.com",
+    "url": "http://defichain.com/"
   },
   "homepage": "./",
   "publicPath": "./",
