--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "random-binary": "^1.0.3",
     "random-string": "^0.2.0",
     "react-ellipsis-text": "^1.2.1",
+    "react-icons": "^4.1.0",
     "react-md-spinner": "^1.0.0",
     "uid": "^1.0.0",
     "uifx": "^2.0.7",
