Revert "chore: changed `npm i` to `npm ci`"
This reverts commit af123c650571b27de3f8a3aca319581f862164a8.

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,7 +10,7 @@
   "homepage": "./",
   "publicPath": "./",
   "scripts": {
-    "init": "npm ci",
+    "init": "npm i",
     "test:watch": "jest --watchAll",
     "test": "jest --silent",
     "test:console": "jest",
