--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,9 +15,9 @@
     "test": "jest --silent",
     "test:console": "jest",
     "test:snapshot:update": "jest --updateSnapshot --silent",
-    "start": "npm run init && webpack-dev-server --mode development --open",
-    "start:dev": "webpack-dev-server --mode development --open",
-    "build:react": "webpack --mode production",
+    "start": "npm run init && webpack serve --mode=development",
+    "start:dev": "webpack serve --mode=development",
+    "build:react": "webpack --mode=production",
     "storybook": "start-storybook -p 9009",
     "build:storybook": "build-storybook"
   },
@@ -30,12 +30,11 @@
     "@storybook/addon-links": "^5.3.9",
     "@storybook/addons": "^5.3.9",
     "@storybook/react": "^5.3.9",
-    "ajv": "^6.12.2",
+    "ajv": "^6.12.6",
     "async": "^3.2.0",
-    "autoprefixer": "^9.7.5",
-    "axios": "^0.19.2",
-    "bignumber.js": "^9.0.0",
-    "bip39": "^3.0.2",
+    "axios": "^0.21.0",
+    "bignumber.js": "^9.0.1",
+    "bip39": "^3.0.3",
     "bitcoinjs-lib": "^5.2.0",
     "bootstrap": "^4.4.1",
     "comma-number": "^2.0.1",
@@ -45,10 +44,9 @@
     "d3-scale": "^3.2.1",
     "electron-log": "^4.2.1",
     "foreman": "^3.0.1",
-    "http-status-codes": "^1.4.0",
+    "http-status-codes": "^2.1.4",
     "is-electron": "^2.2.0",
-    "lodash": "^4.17.15",
-    "prettier": "^2.1.2",
+    "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.0",
     "random-binary": "^1.0.3",
@@ -72,25 +70,23 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "shuffle-array": "^1.0.1",
-    "ts-jest": "^26.0.0",
     "typings-for-css-modules-loader": "^1.7.0",
     "uifx": "^2.0.7"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@neutrinojs/airbnb": "^9.1.0",
-    "@neutrinojs/compile-loader": "^9.1.0",
-    "@neutrinojs/copy": "^9.1.0",
-    "@neutrinojs/jest": "^9.1.0",
-    "@neutrinojs/react": "^9.1.0",
-    "@neutrinojs/style-loader": "^9.1.0",
+    "@neutrinojs/airbnb": "^9.4.0",
+    "@neutrinojs/copy": "^9.4.0",
+    "@neutrinojs/dev-server": "9.4.0",
+    "@neutrinojs/jest": "^9.4.0",
+    "@neutrinojs/web": "^9.4.0",
     "@reduxjs/toolkit": "^1.3.3",
     "@storybook/preset-typescript": "^3.0.0",
-    "@types/classnames": "^2.2.10",
-    "@types/enzyme": "^3.10.5",
+    "@types/classnames": "^2.2.11",
+    "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest": "^25.2.3",
-    "@types/lodash": "^4.14.149",
+    "@types/jest": "^26.0.18",
+    "@types/lodash": "^4.14.165",
     "@types/react": "^16.9.29",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dom": "^16.9.5",
@@ -100,29 +96,32 @@
     "@types/react-redux-i18n": "0.0.11",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-transition-group": "^4.2.4",
-    "@types/reactstrap": "^8.4.2",
     "@types/redux-logger": "^3.0.7",
+    "autoprefixer": "^10.1.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.5.0",
-    "eslint": "^6.8.0",
-    "file-loader": "^6.0.0",
-    "fork-ts-checker-webpack-plugin": "^4.1.2",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
+    "eslint": "^7.15.0",
+    "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^6.0.5",
     "imagemin-webpack-plugin": "^2.4.2",
     "install": "^0.13.0",
-    "jest": "^25.5.4",
-    "mini-css-extract-plugin": "^0.7.0",
-    "neutrino": "^9.1.0",
-    "node-sass": "^4.13.1",
-    "npm": "^6.14.4",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^8.0.2",
-    "source-map-loader": "^0.2.4",
-    "ts-loader": "^6.2.2",
-    "typescript": "^3.8.3",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^1.3.2",
+    "neutrino": "^9.4.0",
+    "npm": "^6.14.9",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss": "8.2.1",
+    "postcss-loader": "^4.1.0",
+    "prettier": "^2.2.1",
+    "sass": "1.30.0",
+    "sass-loader": "^10.1.0",
+    "source-map-loader": "^1.1.3",
+    "ts-jest": "^26.4.4",
+    "ts-loader": "^8.0.11",
+    "typescript": "^4.1.2",
+    "webpack": "4.44.2",
+    "webpack-cli": "4.2.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
