--- a/.github/workflows/dev-builds.yml
+++ b/.github/workflows/dev-builds.yml
@@ -3,6 +3,7 @@ on:
     branches:
       - ci/*
       - master
+      - feature/devDep_updates
 jobs:
   build_linux_version:
     runs-on: ubuntu-latest
