chore: trigger dev build

--- a/.github/workflows/dev-builds.yml
+++ b/.github/workflows/dev-builds.yml
@@ -4,6 +4,7 @@ on:
       - ci/*
       - fix/issues-liquidity
       - master
+      - feature/devDep_updates
 jobs:
   build_linux_version:
     runs-on: ubuntu-latest
