--- a/webapp/package.json
+++ b/webapp/package.json
@@ -62,6 +62,7 @@
     "react-helmet": "^5.2.1",
     "react-hot-loader": "^4.12.20",
     "react-icons": "^4.1.0",
+    "react-number-format": "4.4.1",
     "react-md-spinner": "^1.0.0",
     "react-qr-reader": "^2.2.1",
     "react-redux": "^7.2.0",
