Added branch for dev build

--- a/.github/workflows/dev-builds.yml
+++ b/.github/workflows/dev-builds.yml
@@ -3,6 +3,7 @@ on:
     branches:
       - ci/*
       - fix/issues-liquidity
+      - feature/add-receive-address-manually
       - master
 jobs:
   build_linux_version:
