--- a/webapp/package.json
+++ b/webapp/package.json
@@ -56,6 +56,7 @@
     "react-console-component": "^0.6.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
+    "react-ellipsis-text": "1.2.1",
     "react-helmet": "^5.2.1",
     "react-hot-loader": "^4.12.20",
     "react-icons": "^4.1.0",
@@ -71,6 +72,7 @@
     "redux-saga": "^1.1.3",
     "shuffle-array": "^1.0.1",
     "typings-for-css-modules-loader": "^1.7.0",
+    "uid": "^2.0.0",
     "uifx": "^2.0.7"
   },
   "devDependencies": {
