chore: bump electron dependencies

--- a/.github/workflows/dev-builds.yml
+++ b/.github/workflows/dev-builds.yml
@@ -5,6 +5,7 @@ on:
       - fix/issues-liquidity
       - feature/add-receive-address-manually
       - master
+      - feature/devDev_updates
 jobs:
   build_linux_version:
     runs-on: ubuntu-latest
