--- a/.github/workflows/dev-builds.yml
+++ b/.github/workflows/dev-builds.yml
@@ -1,9 +1,7 @@
 on:
   push:
     branches:
-      - ci/*
-      - fix/issues-liquidity
-      - feature/add-receive-address-manually
+      - ci/master
       - master
       - feature/devDep_updates
 jobs:
@@ -13,7 +11,7 @@ jobs:
       GH_TOKEN: ${{ secrets.GH_TOKEN}}
     steps:
       - uses: actions/checkout@v2
-      - name: install dependecies
+      - name: install dependencies
         run: npm cache clean --force && npm run init
       - name: Build app
         run: npm run build:linux
@@ -30,7 +28,7 @@ jobs:
       CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD}}
     steps:
       - uses: actions/checkout@v2
-      - name: install dependecies
+      - name: install dependencies
         run: npm cache clean --force && npm run init
       - name: Build app
         run: npm run build:mac
@@ -45,7 +43,7 @@ jobs:
       GH_TOKEN: ${{ secrets.GH_TOKEN}}
     steps:
       - uses: actions/checkout@v2
-      - name: install dependecies
+      - name: install dependencies
         run: npm cache clean --force && npm run init
       - name: Build app
         run: |
