--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "crypto-js": "^4.0.0",
     "d3-fetch": "^2.0.0",
     "d3-scale": "^3.2.3",
+    "electron-debug": "^3.2.0",
     "electron-log": "^4.3.1",
     "electron-progressbar": "^2.0.0",
     "electron-root-path": "^1.0.16",
@@ -62,7 +63,7 @@
     "foreman": "^3.0.1",
     "glob": "^7.1.6",
     "http-status-codes": "^2.1.4",
-    "ini": "^1.3.5",
+    "ini": "^1.3.8",
     "lodash": "^4.17.20",
     "loglevel": "^1.7.1",
     "os": "^0.1.1",
@@ -90,6 +91,7 @@
     "babel-register": "^6.26.0",
     "electron": "^11.1.1",
     "electron-builder": "^22.9.1",
+    "electron-devtools-installer": "^3.1.1",
     "eslint": "^7.16.0",
     "file-loader": "^6.2.0",
     "husky": "^4.3.6",
