--- a/webapp/.prettierrc
+++ b/webapp/.prettierrc
@@ -1,6 +1,38 @@
 {
-  "semi": true,
-  "singleQuote": true,
-  "trailingComma": "es5",
-  "jsxSingleQuote": true
+    "useTabs": false,
+    "tabWidth": 4,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "semi": true,
+    "arrowParens": "always",
+    "bracketSpacing": false,
+    "endOfLine": "lf",
+    "overrides": [
+        {
+            "files": ["*.ts"],
+            "options": {
+                "parser": "typescript"
+            }
+        },
+        {
+            "files": ["*.tsx"],
+            "options": {
+                "parser": "typescript",
+                "jsxBracketSameLine": false,
+                "jsxSingleQuote": false
+            }
+        },
+        {
+            "files": ["*.scss"],
+            "options": {
+                "parser": "scss"
+            }
+        },
+        {
+            "files": ["*.json"],
+            "options": {
+                "parser": "json"
+            }
+        }
+    ]
 }
