--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,130 +1,168 @@
 {
-  "name": "defi-app",
-  "version": "2.1.4",
-  "description": "DeFi blockchain client ui",
-  "author": {
-    "name": "DeFiChain Foundation",
-    "email": "engineering@defichain.com",
-    "url": "http://defichain.com/"
-  },
-  "homepage": "./",
-  "publicPath": "./",
-  "scripts": {
-    "init": "npm ci",
-    "test:watch": "jest --watchAll",
-    "test": "jest --silent",
-    "test:console": "jest",
-    "test:snapshot:update": "jest --updateSnapshot --silent",
-    "start": "npm run init && webpack serve --mode=development",
-    "start:dev": "webpack serve --mode=development",
-    "build:react": "webpack --mode=production",
-    "storybook": "start-storybook -p 9009",
-    "build:storybook": "build-storybook"
-  },
-  "keywords": [],
-  "license": "ISC",
-  "dependencies": {
-    "@storybook/addon-actions": "^6.1.11",
-    "@storybook/addon-docs": "^6.1.11",
-    "@storybook/addon-links": "^6.1.11",
-    "@storybook/addons": "^6.1.11",
-    "@storybook/react": "^6.1.11",
-    "ajv": "^6.12.6",
-    "async": "^3.2.0",
-    "axios": "^0.21.1",
-    "bignumber.js": "^9.0.1",
-    "bip39": "^3.0.3",
-    "bitcoinjs-lib": "^5.2.0",
-    "bootstrap": "^4.5.3",
-    "comma-number": "^2.0.1",
-    "convict": "^6.0.0",
-    "crypto-js": "^4.0.0",
-    "d3-fetch": "^2.0.0",
-    "d3-scale": "^3.2.3",
-    "electron-log": "^4.3.1",
-    "foreman": "^3.0.1",
-    "http-status-codes": "^2.1.4",
-    "is-electron": "^2.2.0",
-    "lodash": "^4.17.20",
-    "prop-types": "^15.7.2",
-    "qrcode.react": "^1.0.0",
-    "random-binary": "^1.0.3",
-    "react": "^17.0.1",
-    "react-avatar": "^3.9.7",
-    "react-bootstrap": "^1.4.0",
-    "react-bootstrap-range-slider": "^2.0.2",
-    "react-console-component": "^0.6.1",
-    "react-copy-to-clipboard": "^5.0.2",
-    "react-dom": "^17.0.1",
-    "react-ellipsis-text": "1.2.1",
-    "react-helmet": "^6.1.0",
-    "react-hot-loader": "^4.13.0",
-    "react-icons": "^4.1.0",
-    "react-number-format": "4.4.1",
-    "react-md-spinner": "^1.0.0",
-    "react-qr-reader": "^2.2.1",
-    "react-redux": "^7.2.2",
-    "react-redux-i18n": "^1.9.3",
-    "react-router-dom": "^5.2.0",
-    "react-simple-maps": "^2.3.0",
-    "reactstrap": "^8.7.1",
-    "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3",
-    "shuffle-array": "^1.0.1",
-    "typings-for-css-modules-loader": "^1.7.0",
-    "uid": "^2.0.0",
-    "uifx": "^2.0.7"
-  },
-  "devDependencies": {
-    "@babel/preset-typescript": "^7.12.7",
-    "@babel/plugin-proposal-decorators": "^7.12.1",
-    "@neutrinojs/airbnb": "^9.4.0",
-    "@neutrinojs/copy": "^9.4.0",
-    "@neutrinojs/dev-server": "9.4.0",
-    "@neutrinojs/jest": "^9.4.0",
-    "@neutrinojs/web": "^9.4.0",
-    "@reduxjs/toolkit": "^1.5.0",
-    "@storybook/preset-typescript": "^3.0.0",
-    "@types/classnames": "^2.2.11",
-    "@types/enzyme": "^3.10.8",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest": "^26.0.19",
-    "@types/lodash": "^4.14.165",
-    "@types/react": "^17.0.0",
-    "@types/react-copy-to-clipboard": "^5.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-helmet": "^6.1.0",
-    "@types/react-qr-reader": "^2.1.3",
-    "@types/react-redux": "^7.1.12",
-    "@types/react-redux-i18n": "0.0.11",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/react-transition-group": "^4.4.0",
-    "@types/redux-logger": "^3.0.8",
-    "autoprefixer": "^10.1.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
-    "enzyme-to-json": "^3.6.1",
-    "eslint": "^7.16.0",
-    "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^6.0.8",
-    "imagemin-webpack-plugin": "^2.4.2",
-    "install": "^0.13.0",
-    "jest": "^26.6.3",
-    "mini-css-extract-plugin": "^1.3.3",
-    "neutrino": "^9.4.0",
-    "npm": "^6.14.10",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "postcss": "8.2.1",
-    "postcss-loader": "^4.1.0",
-    "prettier": "^2.2.1",
-    "sass": "1.30.0",
-    "sass-loader": "^10.1.0",
-    "source-map-loader": "^1.1.3",
-    "ts-jest": "^26.4.4",
-    "ts-loader": "^8.0.12",
-    "typescript": "^4.1.3",
-    "webpack": "4.44.2",
-    "webpack-cli": "4.2.0",
-    "webpack-dev-server": "^3.11.0"
-  }
+    "name": "defi-app",
+    "version": "2.1.4",
+    "description": "DeFi blockchain client ui",
+    "author": {
+        "name": "DeFiChain Foundation",
+        "email": "engineering@defichain.com",
+        "url": "http://defichain.com/"
+    },
+    "homepage": "./",
+    "publicPath": "./",
+    "scripts": {
+        "init": "npm ci",
+        "test:watch": "jest --watchAll",
+        "test": "jest --silent",
+        "test:console": "jest",
+        "test:snapshot:update": "jest --updateSnapshot --silent",
+        "start": "npm run init && webpack serve --mode=development",
+        "start:dev": "webpack serve --mode=development --config webpack.config.babel.js",
+        "build:react": "webpack --mode=production",
+        "storybook": "start-storybook -p 9009",
+        "build:storybook": "build-storybook"
+    },
+    "keywords": [],
+    "license": "ISC",
+    "dependencies": {
+        "@storybook/addon-actions": "^6.1.11",
+        "@storybook/addon-docs": "^6.1.11",
+        "@storybook/addon-links": "^6.1.11",
+        "@storybook/addons": "^6.1.11",
+        "@storybook/react": "^6.1.11",
+        "ajv": "^6.12.6",
+        "async": "^3.2.0",
+        "axios": "^0.21.1",
+        "bignumber.js": "^9.0.1",
+        "bip39": "^3.0.3",
+        "bitcoinjs-lib": "^5.2.0",
+        "bootstrap": "^4.5.3",
+        "comma-number": "^2.0.1",
+        "convict": "^6.0.0",
+        "crypto-js": "^4.0.0",
+        "d3-fetch": "^2.0.0",
+        "d3-scale": "^3.2.3",
+        "electron-log": "^4.3.1",
+        "foreman": "^3.0.1",
+        "http-status-codes": "^2.1.4",
+        "is-electron": "^2.2.0",
+        "lodash": "^4.17.20",
+        "prop-types": "^15.7.2",
+        "qrcode.react": "^1.0.0",
+        "random-binary": "^1.0.3",
+        "react": "^17.0.1",
+        "react-avatar": "^3.9.7",
+        "react-bootstrap": "^1.4.0",
+        "react-bootstrap-range-slider": "^2.0.2",
+        "react-console-component": "^0.6.1",
+        "react-copy-to-clipboard": "^5.0.2",
+        "react-dom": "^17.0.1",
+        "react-ellipsis-text": "1.2.1",
+        "react-helmet": "^6.1.0",
+        "react-hot-loader": "^4.13.0",
+        "react-icons": "^4.1.0",
+        "react-number-format": "4.4.1",
+        "react-md-spinner": "^1.0.0",
+        "react-qr-reader": "^2.2.1",
+        "react-redux": "^7.2.2",
+        "react-redux-i18n": "^1.9.3",
+        "react-router-dom": "^5.2.0",
+        "react-simple-maps": "^2.3.0",
+        "reactstrap": "^8.7.1",
+        "redux-logger": "^3.0.6",
+        "redux-saga": "^1.1.3",
+        "regenerator-runtime": "^0.13.7",
+        "shuffle-array": "^1.0.1",
+        "typings-for-css-modules-loader": "^1.7.0",
+        "uid": "^2.0.0",
+        "uifx": "^2.0.7"
+    },
+    "devDependencies": {
+        "@babel/core": "~7.12.10",
+        "@babel/plugin-proposal-class-properties": "~7.12.1",
+        "@babel/plugin-proposal-export-default-from": "^7.12.1",
+        "@babel/plugin-proposal-export-namespace-from": "~7.12.1",
+        "@babel/plugin-proposal-object-rest-spread": "~7.12.1",
+        "@babel/plugin-proposal-throw-expressions": "~7.12.1",
+        "@babel/plugin-syntax-dynamic-import": "~7.8.3",
+        "@babel/plugin-transform-runtime": "~7.12.10",
+        "@babel/preset-env": "~7.12.11",
+        "@babel/preset-react": "~7.12.10",
+        "@babel/register": "~7.12.10",
+        "@pmmmwh/react-refresh-webpack-plugin": "~0.4.3",
+        "@svgr/webpack": "~5.5.0",
+        "@teamsupercell/typings-for-css-modules-loader": "~2.4.0",
+        "@reduxjs/toolkit": "^1.5.0",
+        "@storybook/preset-typescript": "^3.0.0",
+        "@types/classnames": "^2.2.11",
+        "@types/enzyme": "^3.10.8",
+        "@types/enzyme-adapter-react-16": "^1.0.6",
+        "@types/jest": "^26.0.19",
+        "@types/lodash": "^4.14.165",
+        "@types/react": "^17.0.0",
+        "@types/react-copy-to-clipboard": "^5.0.0",
+        "@types/react-dom": "^17.0.0",
+        "@types/react-helmet": "^6.1.0",
+        "@types/react-qr-reader": "^2.1.3",
+        "@types/react-redux": "^7.1.13",
+        "@types/react-redux-i18n": "0.0.11",
+        "@types/react-router-dom": "^5.1.6",
+        "@types/react-transition-group": "^4.4.0",
+        "@types/redux-logger": "^3.0.8",
+        "@typescript-eslint/eslint-plugin": "^4.11.0",
+        "@typescript-eslint/parser": "^4.11.0",
+        "autoprefixer": "^10.1.0",
+        "babel-eslint": "^10.1.0",
+        "babel-loader": "^8.2.2",
+        "clean-webpack-plugin": "~3.0.0",
+        "copy-webpack-plugin": "~7.0.0",
+        "core-js": "^3.8.1",
+        "css-loader": "~5.0.1",
+        "cssnano": "~4.1.10",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.5",
+        "enzyme-to-json": "^3.6.1",
+        "eslint": "^7.16.0",
+        "eslint-config-airbnb-base": "~14.2.1",
+        "eslint-config-airbnb-typescript": "~12.0.0",
+        "eslint-config-prettier": "~7.1.0",
+        "eslint-import-resolver-alias": "~1.1.2",
+        "eslint-plugin-import": "~2.22.1",
+        "eslint-plugin-jsx-a11y": "~6.4.1",
+        "eslint-plugin-react": "~7.21.5",
+        "eslint-plugin-react-hooks": "~4.2.0",
+        "eslint-webpack-plugin": "~2.4.1",
+        "file-loader": "^6.2.0",
+        "fork-ts-checker-webpack-plugin": "~6.0.8",
+        "html-loader": "~1.3.2",
+        "html-webpack-plugin": "~5.0.0-beta.1",
+        "import-sort-style-module-and-prefix": "~0.1.3",
+        "imagemin-webpack-plugin": "^2.4.2",
+        "install": "^0.13.0",
+        "jest": "^26.6.3",
+        "mini-css-extract-plugin": "^1.3.3",
+        "npm": "^6.14.10",
+        "optimize-css-assets-webpack-plugin": "^5.0.4",
+        "path": "~0.12.7",
+        "postcss": "8.2.1",
+        "postcss-loader": "^4.1.0",
+        "prettier": "^2.2.1",
+        "react-refresh": "^0.9.0",
+        "react-test-renderer": "^17.0.1",
+        "regenerator-runtime": "~0.13.7",
+        "sass": "1.30.0",
+        "sass-loader": "^10.1.0",
+        "sass-resources-loader": "~2.1.1",
+        "style-loader": "~2.0.0",
+        "svg-url-loader": "~7.1.1",
+        "terser-webpack-plugin": "^5.0.3",
+        "ts-jest": "^26.4.4",
+        "ts-loader": "^8.0.12",
+        "typescript": "^4.1.3",
+        "url-loader": "^4.1.1",
+        "webpack": "5.11.0",
+        "webpack-cli": "4.2.0",
+        "webpack-dev-server": "^3.11.0",
+        "webpack-merge": "^5.7.3",
+        "yargs": "~16.2.0"
+    }
 }
