--- a/webapp/package.json
+++ b/webapp/package.json
@@ -116,6 +116,7 @@
         "clean-webpack-plugin": "~3.0.0",
         "copy-webpack-plugin": "~7.0.0",
         "core-js": "^3.8.1",
+        "crypto-browserify": "3.12.0",
         "css-loader": "~5.0.1",
         "cssnano": "~4.1.10",
         "enzyme": "^3.11.0",
@@ -149,10 +150,12 @@
         "react-refresh": "^0.9.0",
         "react-test-renderer": "^17.0.1",
         "regenerator-runtime": "~0.13.7",
+        "resolve-url-loader": "3.1.2",
         "sass": "1.30.0",
         "sass-loader": "^10.1.0",
         "sass-resources-loader": "~2.1.1",
         "style-loader": "~2.0.0",
+        "stream-browserify": "3.0.0",
         "svg-url-loader": "~7.1.1",
         "terser-webpack-plugin": "^5.0.3",
         "ts-jest": "^26.4.4",
