feat: 2nd stage of webpack update

--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "outDir": "./dist/",
+        "outDir": "./dist",
         "sourceMap": true,
         "target": "es5",
         "lib": ["dom", "esnext"],
