--- a/webapp/package.json
+++ b/webapp/package.json
@@ -113,6 +113,7 @@
         "autoprefixer": "^10.1.0",
         "babel-eslint": "^10.1.0",
         "babel-loader": "^8.2.2",
+        "buffer": "6.0.3",
         "clean-webpack-plugin": "~3.0.0",
         "copy-webpack-plugin": "~7.0.0",
         "core-js": "^3.8.1",
@@ -147,6 +148,7 @@
         "postcss": "8.2.1",
         "postcss-loader": "^4.1.0",
         "prettier": "^2.2.1",
+        "process": "0.11.10",
         "react-refresh": "^0.9.0",
         "react-test-renderer": "^17.0.1",
         "regenerator-runtime": "~0.13.7",
