--- a/webapp/package.json
+++ b/webapp/package.json
@@ -109,29 +109,63 @@
         "@types/redux-logger": "^3.0.8",
         "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
         "autoprefixer": "^10.1.0",
+        "babel-eslint": "^10.1.0",
+        "babel-loader": "^8.2.2",
+        "buffer": "6.0.3",
+        "clean-webpack-plugin": "~3.0.0",
+        "copy-webpack-plugin": "~7.0.0",
+        "core-js": "^3.8.1",
+        "crypto-browserify": "3.12.0",
+        "css-loader": "~5.0.1",
+        "cssnano": "~4.1.10",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.5",
         "enzyme-to-json": "^3.6.1",
         "eslint": "^7.16.0",
+        "eslint-config-airbnb-base": "~14.2.1",
+        "eslint-config-airbnb-typescript": "~12.0.0",
+        "eslint-config-prettier": "~7.1.0",
+        "eslint-import-resolver-alias": "~1.1.2",
+        "eslint-plugin-import": "~2.22.1",
+        "eslint-plugin-jsx-a11y": "~6.4.1",
+        "eslint-plugin-react": "~7.21.5",
+        "eslint-plugin-react-hooks": "~4.2.0",
+        "eslint-webpack-plugin": "~2.4.1",
         "file-loader": "^6.2.0",
-        "fork-ts-checker-webpack-plugin": "^6.0.8",
+        "fork-ts-checker-webpack-plugin": "~6.0.8",
+        "html-loader": "~1.3.2",
+        "html-webpack-plugin": "~5.0.0-beta.1",
+        "import-sort-style-module-and-prefix": "~0.1.3",
         "imagemin-webpack-plugin": "^2.4.2",
         "install": "^0.13.0",
         "jest": "^26.6.3",
         "mini-css-extract-plugin": "^1.3.3",
         "npm": "^6.14.10",
         "optimize-css-assets-webpack-plugin": "^5.0.4",
+        "path": "~0.12.7",
         "postcss": "8.2.1",
         "postcss-loader": "^4.1.0",
         "prettier": "^2.2.1",
+        "process": "0.11.10",
+        "react-refresh": "^0.9.0",
+        "react-test-renderer": "^17.0.1",
+        "regenerator-runtime": "~0.13.7",
+        "resolve-url-loader": "3.1.2",
         "sass": "1.30.0",
         "sass-loader": "^10.1.0",
-        "source-map-loader": "^2.0.0",
+        "sass-resources-loader": "~2.1.1",
+        "style-loader": "~2.0.0",
+        "stream-browserify": "3.0.0",
+        "svg-url-loader": "~7.1.1",
+        "terser-webpack-plugin": "^5.0.3",
         "ts-jest": "^26.4.4",
         "ts-loader": "^8.0.12",
         "typescript": "^4.1.3",
+        "url-loader": "^4.1.1",
         "webpack": "5.11.1",
         "webpack-cli": "4.3.0",
-        "webpack-dev-server": "^3.11.0"
+        "webpack-dev-server": "^3.11.0",
+        "webpack-merge": "^5.7.3",
+        "yargs": "~16.2.0"
     }
 }
