--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,9 +15,9 @@
         "test": "jest --silent",
         "test:console": "jest",
         "test:snapshot:update": "jest --updateSnapshot --silent",
-        "start": "npm run init && webpack serve --mode=development",
-        "start:dev": "webpack serve --mode=development --config webpack.config.babel.js",
-        "build:react": "webpack --mode=production",
+        "start": "npm run init && webpack serve NODE_ENV=development",
+        "start:dev": "webpack serve NODE_ENV=development --config webpack.config.babel.js",
+        "build:react": "webpack NODE_ENV=production",
         "storybook": "start-storybook -p 9009",
         "build:storybook": "build-storybook"
     },
@@ -163,6 +163,7 @@
         "typescript": "^4.1.3",
         "url-loader": "^4.1.1",
         "webpack": "5.11.1",
+        "webpackbar": "5.0.0-3",
         "webpack-cli": "4.3.0",
         "webpack-dev-server": "^3.11.0",
         "webpack-merge": "^5.7.3",
