chore: updated styling, workable packages

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,38 @@
 {
-  "semi": true,
-  "singleQuote": true,
-  "trailingComma": "es5"
+    "useTabs": false,
+    "tabWidth": 4,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "semi": true,
+    "arrowParens": "always",
+    "bracketSpacing": true,
+    "endOfLine": "lf",
+    "overrides": [
+        {
+            "files": ["*.ts"],
+            "options": {
+                "parser": "typescript"
+            }
+        },
+        {
+            "files": ["*.tsx"],
+            "options": {
+                "parser": "typescript",
+                "jsxBracketSameLine": false,
+                "jsxSingleQuote": false
+            }
+        },
+        {
+            "files": ["*.scss"],
+            "options": {
+                "parser": "scss"
+            }
+        },
+        {
+            "files": ["*.json"],
+            "options": {
+                "parser": "json"
+            }
+        }
+    ]
 }
