--- a/webapp/package.json
+++ b/webapp/package.json
@@ -58,7 +58,6 @@
         "react-dom": "^17.0.1",
         "react-ellipsis-text": "1.2.1",
         "react-helmet": "^6.1.0",
-        "react-hot-loader": "^4.13.0",
         "react-icons": "^4.1.0",
         "react-number-format": "4.4.1",
         "react-md-spinner": "^1.0.0",
@@ -71,7 +70,6 @@
         "redux-logger": "^3.0.6",
         "redux-saga": "^1.1.3",
         "shuffle-array": "^1.0.1",
-        "typings-for-css-modules-loader": "^1.7.0",
         "uid": "^2.0.0",
         "uifx": "^2.0.7"
     },
@@ -88,8 +86,6 @@
         "@babel/preset-react": "~7.12.10",
         "@babel/register": "~7.12.10",
         "@pmmmwh/react-refresh-webpack-plugin": "~0.4.3",
-        "@svgr/webpack": "~5.5.0",
-        "@teamsupercell/typings-for-css-modules-loader": "~2.4.0",
         "@reduxjs/toolkit": "^1.5.0",
         "@storybook/preset-typescript": "^3.0.0",
         "@types/classnames": "^2.2.11",
@@ -153,10 +149,8 @@
         "resolve-url-loader": "3.1.2",
         "sass": "1.30.0",
         "sass-loader": "^10.1.0",
-        "sass-resources-loader": "~2.1.1",
         "style-loader": "~2.0.0",
         "stream-browserify": "3.0.0",
-        "svg-url-loader": "~7.1.1",
         "terser-webpack-plugin": "^5.0.3",
         "ts-jest": "^26.4.4",
         "ts-loader": "^8.0.12",
@@ -166,7 +160,6 @@
         "webpackbar": "5.0.0-3",
         "webpack-cli": "4.3.0",
         "webpack-dev-server": "^3.11.0",
-        "webpack-merge": "^5.7.3",
-        "yargs": "~16.2.0"
+        "webpack-merge": "^5.7.3"
     }
 }
