--- a/webapp/package.json
+++ b/webapp/package.json
@@ -132,7 +132,11 @@
         "html-loader": "~1.3.2",
         "html-webpack-plugin": "~5.0.0-beta.1",
         "import-sort-style-module-and-prefix": "~0.1.3",
-        "imagemin-webpack-plugin": "^2.4.2",
+        "imagemin-gifsicle": "7.0.0",
+        "imagemin-jpegtran": "7.0.0",
+        "imagemin-optipng": "8.0.0",
+        "imagemin-svgo": "8.0.0",
+        "image-minimizer-webpack-plugin": "2.1.0",
         "install": "^0.13.0",
         "jest": "^26.6.3",
         "mini-css-extract-plugin": "^1.3.3",
