chore: webpack update, working dev and production build

--- a/package.json
+++ b/package.json
@@ -19,27 +19,28 @@
         "start:react": "cd webapp && npm run start:dev",
         "start:electron": "node initiate-electron",
         "start:electron-url": "export ELECTRON_START_URL=http://localhost:5000 && electron --inspect .",
-        "electron": "npm run transpile && NODE_ENV=development electron --inspect . -d true",
+        "electron": "npm run transpile && cross-env NODE_ENV=development electron --inspect . -d true",
         "build:react": "cd webapp && npm run build:react",
         "pre:build:linux": "sh pre-build-linux.sh",
         "pre:build:mac": "sh pre-build-mac.sh",
         "pre:build:win": "sh pre-build-win.sh",
-        "build": "npm run build:react && npm run transpile && NODE_ENV=production electron-builder",
-        "build:all": "npm run build:react && npm run transpile && NODE_ENV=production electron-builder -mwl",
-        "build:linux": "npm run pre:build:linux && npm run build:react && npm run transpile && NODE_ENV=production electron-builder --linux -p never",
-        "build:mac": "npm run pre:build:mac && npm run build:react && npm run transpile && NODE_ENV=production electron-builder --mac -p never",
-        "build:win": "npm run build:react && npm run transpile && SET NODE_ENV=production & electron-builder --win -p never",
-        "pack": "npm run build:react && npm run transpile && NODE_ENV=production electron-builder --dir",
+        "build": "npm run build:react && npm run transpile && npm run set_env:prod && electron-builder",
+        "build:all": "npm run build:react && npm run transpile && npm run set_env:prod && electron-builder -mwl",
+        "build:linux": "npm run pre:build:linux && npm run build:react && npm run transpile && npm run set_env:prod && electron-builder --linux -p never",
+        "build:mac": "npm run pre:build:mac && npm run build:react && npm run transpile && npm run set_env:prod && electron-builder --mac -p never",
+        "build:win": "npm run build:react && npm run transpile && npm run set_env:prod && electron-builder --win -p never",
+        "pack": "npm run build:react && npm run transpile && npm run set_env:prod && electron-builder --dir",
         "lint": "tslint --project tsconfig.json --config tslint.json",
         "lint:webapp": "tslint -p webapp/tsconfig.json -c tslint.json",
         "postinstall": "electron-builder install-app-deps",
-        "publish": "npm run build:react && npm run transpile && NODE_ENV=production electron-builder build -p always",
-        "publish:linux": "npm run build:react && npm run transpile && NODE_ENV=production electron-builder build -p always",
-        "publish:mac": "npm run build:react && npm run transpile && NODE_ENV=production electron-builder build -p always",
-        "publish:win": "npm run build:react && npm run transpile && SET NODE_ENV=production & electron-builder build -p always",
+        "publish": "npm run build:react && npm run transpile && npm run set_env:prod && electron-builder build -p always",
+        "publish:linux": "npm run build:react && npm run transpile && npm run set_env:prod && electron-builder build -p always",
+        "publish:mac": "npm run build:react && npm run transpile && npm run set_env:prod && electron-builder build -p always",
+        "publish:win": "npm run build:react && npm run transpile && npm run set_env:prod & electron-builder build -p always",
         "test:react": "cd webapp/ && npm run test",
         "test:react:snapshot": "cd webapp/ && npm run test:snapshot:update",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "set_env:prod": "cross-env NODE_ENV=production"
     },
     "keywords": [],
     "license": "ISC",
@@ -89,7 +90,7 @@
         "@typescript-eslint/eslint-plugin": "^4.11.1",
         "@typescript-eslint/parser": "^4.11.1",
         "babel-preset-env": "^1.7.0",
-        "babel-register": "^6.26.0",
+        "cross-env": "7.0.3",
         "electron": "^11.1.1",
         "electron-builder": "^22.9.1",
         "electron-devtools-installer": "^3.1.1",
