--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,9 +15,9 @@
         "test": "jest --silent",
         "test:console": "jest",
         "test:snapshot:update": "jest --updateSnapshot --silent",
-        "start": "npm run init && webpack serve NODE_ENV=development",
-        "start:dev": "webpack serve NODE_ENV=development --config webpack.config.babel.js",
-        "build:react": "webpack NODE_ENV=production",
+        "start": "npm run init && cross-env NODE_ENV=development webpack serve",
+        "start:dev": "cross-env NODE_ENV=development webpack serve --config webpack.config.babel.js",
+        "build:react": "cross-env NODE_ENV=production webpack",
         "storybook": "start-storybook -p 9009",
         "build:storybook": "build-storybook"
     },
@@ -111,6 +111,7 @@
         "clean-webpack-plugin": "~3.0.0",
         "copy-webpack-plugin": "~7.0.0",
         "core-js": "^3.8.1",
+        "cross-env": "^7.0.3",
         "crypto-browserify": "3.12.0",
         "css-loader": "~5.0.1",
         "cssnano": "~4.1.10",
@@ -131,12 +132,11 @@
         "fork-ts-checker-webpack-plugin": "~6.0.8",
         "html-loader": "~1.3.2",
         "html-webpack-plugin": "~5.0.0-beta.1",
-        "import-sort-style-module-and-prefix": "~0.1.3",
-        "imagemin-gifsicle": "7.0.0",
+        "image-minimizer-webpack-plugin": "2.1.0",
         "imagemin-jpegtran": "7.0.0",
         "imagemin-optipng": "8.0.0",
         "imagemin-svgo": "8.0.0",
-        "image-minimizer-webpack-plugin": "2.1.0",
+        "import-sort-style-module-and-prefix": "~0.1.3",
         "install": "^0.13.0",
         "jest": "^26.6.3",
         "mini-css-extract-plugin": "^1.3.3",
@@ -153,17 +153,17 @@
         "resolve-url-loader": "3.1.2",
         "sass": "1.30.0",
         "sass-loader": "^10.1.0",
-        "style-loader": "~2.0.0",
         "stream-browserify": "3.0.0",
+        "style-loader": "~2.0.0",
         "terser-webpack-plugin": "^5.0.3",
         "ts-jest": "^26.4.4",
         "ts-loader": "^8.0.12",
         "typescript": "^4.1.3",
         "url-loader": "^4.1.1",
         "webpack": "5.11.1",
-        "webpackbar": "5.0.0-3",
         "webpack-cli": "4.3.0",
         "webpack-dev-server": "^3.11.0",
-        "webpack-merge": "^5.7.3"
+        "webpack-merge": "^5.7.3",
+        "webpackbar": "5.0.0-3"
     }
 }
