--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "transpile": "tsc",
         "watch": "tsc -w",
         "start": "npm run init && npm run start:dev",
-        "start:dev": "nf start",
+        "start:dev": "concurrently -p \"[{time} - {name}]\" -n \"ReactApp,Electron\" -c \"bgMagenta.black.bold,bgCyan.black.bold\" -t \"hh:mm:ss a\" \"npm run start:react\" \"npm run start:electron\"",
         "start:react": "cd webapp && npm run start:dev",
         "start:electron": "node initiate-electron",
         "start:electron-url": "export ELECTRON_START_URL=http://localhost:5000 && electron --inspect .",
@@ -90,6 +90,7 @@
         "@typescript-eslint/eslint-plugin": "^4.11.1",
         "@typescript-eslint/parser": "^4.11.1",
         "babel-preset-env": "^1.7.0",
+        "concurrently": "5.3.0",
         "cross-env": "7.0.3",
         "electron": "^11.1.1",
         "electron-builder": "^22.9.1",
@@ -162,11 +163,6 @@
     "husky": {
         "hooks": {
             "pre-commit": "pretty-quick --staged"
-        }
-    },
-    "importSort": {
-        ".js, .jsx, .ts, .tsx": {
-            "style": "module-and-prefix"
         }
     }
 }
