--- a/webapp/package.json
+++ b/webapp/package.json
@@ -23,6 +23,11 @@
     },
     "keywords": [],
     "license": "ISC",
+    "importSort": {
+        ".js, .jsx, .ts, .tsx": {
+            "style": "module-and-prefix"
+        }
+    },
     "dependencies": {
         "@storybook/addon-actions": "^6.1.11",
         "@storybook/addon-docs": "^6.1.11",
@@ -42,7 +47,6 @@
         "d3-fetch": "^2.0.0",
         "d3-scale": "^3.2.3",
         "electron-log": "^4.3.1",
-        "foreman": "^3.0.1",
         "http-status-codes": "^2.1.4",
         "is-electron": "^2.2.0",
         "lodash": "^4.17.20",
@@ -157,13 +161,12 @@
         "style-loader": "~2.0.0",
         "terser-webpack-plugin": "^5.0.3",
         "ts-jest": "^26.4.4",
-        "ts-loader": "^8.0.12",
+        "ts-loader": "^8.0.13",
         "typescript": "^4.1.3",
         "url-loader": "^4.1.1",
         "webpack": "5.11.1",
         "webpack-cli": "4.3.0",
         "webpack-dev-server": "^3.11.1",
-        "webpack-merge": "^5.7.3",
-        "webpackbar": "5.0.0-3"
+        "webpack-merge": "^5.7.3"
     }
 }
