--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
         "electron": "^11.1.1",
         "electron-builder": "^22.9.1",
         "electron-devtools-installer": "^3.1.1",
+        "electron-notarize": "1.0.0",
         "eslint": "^7.16.0",
         "file-loader": "^6.2.0",
         "husky": "^4.3.6",
