--- a/webapp/package.json
+++ b/webapp/package.json
@@ -19,7 +19,8 @@
         "start:dev": "cross-env NODE_ENV=development webpack serve --config webpack.config.babel.js",
         "build:react": "cross-env NODE_ENV=production webpack",
         "storybook": "start-storybook -p 9009",
-        "build:storybook": "build-storybook"
+        "build:storybook": "build-storybook",
+        "profile": "webpack --profile --json --config webpack.config.babel.js > ./build/profile.json && webpack-bundle-analyzer ./build/profile.json"
     },
     "keywords": [],
     "license": "ISC",
@@ -165,6 +166,7 @@
         "typescript": "^4.1.3",
         "url-loader": "^4.1.1",
         "webpack": "5.11.1",
+        "webpack-bundle-analyzer": "~4.3.0",
         "webpack-cli": "4.3.0",
         "webpack-dev-server": "^3.11.1",
         "webpack-merge": "^5.7.3"
