feat: added new languages (ZHS, ZHT, NL)

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -114,10 +114,10 @@
     "jest": "^25.5.4",
     "mini-css-extract-plugin": "^0.7.0",
     "neutrino": "^9.1.0",
-    "node-sass": "^4.13.1",
     "npm": "^6.14.4",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
+    "sass": "1.32.0",
     "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.2.2",
