--- a/package.json
+++ b/package.json
@@ -105,9 +105,9 @@
     "jest": "^25.2.4",
     "lint-staged": "^10.2.9",
     "neutrino": "^9.3.0",
-    "node-sass": "^4.13.1",
     "npm": "^6.14.8",
     "prettier": "^2.1.2",
+    "sass": "1.32.0",
     "ts-loader": "^6.2.2",
     "tslint": "^6.1.2",
     "typescript": "^3.8.3"
