--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "useTabs": false,
   "tabWidth": 2,
   "singleQuote": true,
-  "trailingComma": "all",
+  "trailingComma": "es5",
   "semi": true,
   "arrowParens": "always",
   "bracketSpacing": true,
