--- a/.github/workflows/dev-builds.yml
+++ b/.github/workflows/dev-builds.yml
@@ -3,7 +3,7 @@ on:
     branches:
       - ci/master
       - master
-      - code-refactoring
+      - feat/proper_typings
 jobs:
   build_linux_version:
     runs-on: ubuntu-latest
