--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "sourceMap": true,
     "baseUrl": ".",
     "paths": {
+      "@defi_types/*": ["./typings/*"],
       "*": ["node_modules/*"]
     }
   },
