--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": {
     "name": "DeFiChain Foundation",
     "email": "engineering@defichain.com",
-    "url": "http://defichain.com/"
+    "url": "https://defichain.com/"
   },
   "homepage": "./",
   "publicPath": "./",
@@ -98,7 +98,7 @@
     "electron-notarize": "1.0.0",
     "eslint": "^7.17.0",
     "file-loader": "^6.2.0",
-    "husky": "^4.3.6",
+    "husky": "^4.3.7",
     "install": "^0.13.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
