build: update build process

--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "build:react": "cd webapp && npm run build:react",
     "pre:build:linux": "sh pre-build-linux.sh",
     "pre:build:mac": "sh pre-build-mac.sh",
-    "pre:build:win": "sh pre-build-win.sh",
+    "pre:build:win": "pre-build-win.cmd",
     "build": "npm run build:react && npm run transpile && npm run set_env:prod && electron-builder",
     "build:all": "npm run build:react && npm run transpile && npm run set_env:prod && electron-builder -mwl",
     "build:linux": "npm run pre:build:linux && npm run build:react && npm run transpile && npm run set_env:prod && electron-builder --linux -p never",
     "build:mac": "npm run pre:build:mac && npm run build:react && npm run transpile && npm run set_env:prod && electron-builder --mac -p never",
-    "build:win": "npm run build:react && npm run transpile && npm run set_env:prod && electron-builder --win -p never",
+    "build:win": "npm run pre:build:win && npm run build:react && npm run transpile && npm run set_env:prod && electron-builder --win -p never",
     "pack": "npm run build:react && npm run transpile && npm run set_env:prod && electron-builder --dir",
     "lint": "tslint --project tsconfig.json --config tslint.json",
     "lint:webapp": "tslint -p webapp/tsconfig.json -c tslint.json",
