--- a/.github/workflows/dev-builds.yml
+++ b/.github/workflows/dev-builds.yml
@@ -3,7 +3,7 @@ on:
     branches:
       - ci/master
       - master
-      - code-refactoring
+      - feat/win_build_updates
 jobs:
   build_linux_version:
     runs-on: ubuntu-latest
@@ -46,24 +46,7 @@ jobs:
       - name: install dependencies
         run: npm cache clean --force && npm run init
       - name: Build app
-        run: |
-          mkdir binary -ea 0
-          cd binary
-          rm -r -fo win, mac, linux -ErrorAction Ignore
-          mkdir win
-          cd ..
-          mkdir temp -ea 0
-          cd temp
-          rm -r -fo win -ErrorAction Ignore
-          mkdir win
-          cd win
-          curl https://github.com/DeFiCh/ain/releases/download/v1.3.17rc3/defichain-1.3.17rc3-x86_64-w64-mingw32.zip -O defichain-1.3.17rc3-x86_64-w64-mingw32.zip
-          Expand-Archive -LiteralPath .\defichain-1.3.17rc3-x86_64-w64-mingw32.zip -DestinationPath .
-          Copy-Item .\defichain-1.3.17rc3\bin\defid.exe .
-          cd ..\..
-          Copy-Item temp\win\defid.exe binary\win\defid.exe
-          icacls binary\win\defid.exe /grant everyone:F
-          npm run build:win
+        run: npm run build:win
         shell: powershell
       - uses: actions/upload-artifact@v2
         with:
