build: improvement on updating node version

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "homepage": "./",
   "publicPath": "./",
+  "ainVersion": "1.3.17rc3",
   "scripts": {
     "init": "npm ci && cd webapp && npm run init",
     "transpile": "tsc",
@@ -21,9 +22,9 @@
     "start:electron-url": "export ELECTRON_START_URL=http://localhost:5000 && electron --inspect .",
     "electron": "npm run transpile && cross-env NODE_ENV=development electron --inspect . -d true",
     "build:react": "cd webapp && npm run build:react",
-    "pre:build:linux": "sh pre-build-linux.sh",
-    "pre:build:mac": "sh pre-build-mac.sh",
-    "pre:build:win": "pre-build-win.cmd",
+    "pre:build:linux": "sh pre-build-linux.sh $npm_package_ainVersion",
+    "pre:build:mac": "sh pre-build-mac.sh $npm_package_ainVersion",
+    "pre:build:win": "pre-build-win.cmd %npm_package_ainVersion%",
     "build": "npm run build:react && npm run transpile && npm run set_env:prod && electron-builder",
     "build:all": "npm run build:react && npm run transpile && npm run set_env:prod && electron-builder -mwl",
     "build:linux": "npm run pre:build:linux && npm run build:react && npm run transpile && npm run set_env:prod && electron-builder --linux -p never",
