build: replaced action for all os support

--- a/.github/workflows/dev-builds.yml
+++ b/.github/workflows/dev-builds.yml
@@ -12,8 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Get App Version
-        id: package-version
-        uses: martinbeentjes/npm-get-version-action@master
+        uses: nyaayaya/package-version@v1
       - name: install dependencies
         run: npm cache clean --force && npm run init
       - name: Build app
@@ -21,7 +20,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: linux-build
-          path: 'dist/defi-app-${{ steps.package-version.outputs.current-version}}.AppImage'
+          path: 'dist/defi-app-${{ env.PACKAGE_VERSION}}.AppImage'
 
   build_mac_version:
     runs-on: macos-latest
@@ -32,8 +31,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Get App Version
-        id: package-version
-        uses: martinbeentjes/npm-get-version-action@master
+        uses: nyaayaya/package-version@v1
       - name: install dependencies
         run: npm cache clean --force && npm run init
       - name: Build app
@@ -41,7 +39,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: mac-build
-          path: 'dist/defi-app-${{ steps.package-version.outputs.current-version}}.dmg'
+          path: 'dist/defi-app-${{ env.PACKAGE_VERSION}}.dmg'
 
   build_windows_version:
     runs-on: windows-latest
@@ -50,8 +48,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Get App Version
-        id: package-version
-        uses: martinbeentjes/npm-get-version-action@master
+        uses: nyaayaya/package-version@v1
       - name: install dependencies
         run: npm cache clean --force && npm run init
       - name: Build app
@@ -60,4 +57,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: win-build
-          path: 'dist/defi-app Setup ${{ steps.package-version.outputs.current-version}}.exe'
+          path: 'dist/defi-app Setup ${{ env.PACKAGE_VERSION}}.exe'
